--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
                                 <div class="product-price"></div>
                                 <div class="product-action">
                                      
-                                    <a href="register.html" class="btn btn-product">加入课堂</a>
+                                    <a href="lovechopin-production.up.railway.app" class="btn btn-product">加入课堂</a>
                                      
                                 </div>
                             </div>
@@ -1140,6 +1140,7 @@
 </body>
 
 </html>
+
 
 
 
