--- a/chat.html
+++ b/chat.html
@@ -112,7 +112,7 @@
 
     <script>
         // 配置
-        const API_BASE_URL = 'https://lovechopin-production.up.railway.app';
+        const API_BASE_URL = 'https://lovechopin-production-md6c.up.railway.app';
         const API_ENDPOINT = '/api/nlp/sentiment_classify';
         
         // DOM元素
@@ -213,4 +213,5 @@
         }
     </script>
 </body>
+
 </html>
